# Ragchat

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: api.py  cli.py  config.py  ingest.py  query.py
tests/: test_api.py  test_ingest.py
